[package]
name = "gramep"
version = "1.2.1"
edition = "2021"

[lib]
name = "utilrs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.22.5"
rayon = "1.10"
num_cpus = "1.16"
rustc-hash = "2.1.0"
bio = "2.0.1"
regex = "1.11.1"
concat-string = "1.0.1"
itertools = "0.14.0"
spinners = "4.1.1"
anyhow = "1.0.95"

[profile.release]
lto = 'thin'
opt-level = 3
overflow-checks = false
panic = 'abort'