[tool.poetry]
name = "gramep"
version = "1.0.0"
description = "GRAMEP - Genome vaRiation Analysis from the Maximum Entropy Principle"
authors = [
    "Matheus Pimenta <matheus.pimenta@outlook.com>",
    "Fabricio Lopes <fabricio@utfpr.edu.br>",
    ]
maintainers = [
    "Matheus Pimenta <matheus.pimenta@outlook.com>",
]
readme = "README.md"
license = "MIT"
packages = [{include = "gramep", from = "python"}]

[project]
name = "gramep"
version = "1.0.0"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Natural Language :: English",
    "Environment :: Console",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
"Code" = "https://github.com/omatheuspimenta/GRAMEP"
"Bug Tracker" = "https://github.com/omatheuspimenta/GRAMEP/issues"
"Documentation" = "https://gramep.readthedocs.io/en/latest/"

[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[tool.maturin]
python-source = "python"
module-name = "gramep.utilrs"
features = ["pyo3/extension-module"]

[tool.poetry.scripts]
gramep = "gramep.cli:app"

[tool.poetry.dependencies]
python = "^3.12"
rich = "^13.7.1"
typer = "^0.12.3"
biopython = "^1.83"
pandas = "^2.2.2"
gffpandas = "^1.2.0"
joblib = "^1.4.2"
joblib-progress = "^1.0.5"
matplotlib = "^3.9.0"
upsetplot = "^0.9.0"
scikit-learn = "^1.5.1"
seaborn = "^0.13.2"
polars = "^1.5.0"
toytree = "^3.0.5"
thefuzz = "^0.22.1"

[tool.poetry.group.dev.dependencies]
maturin = "^1.5.1"
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
taskipy = "^1.13.0"
isort = "^5.13.2"
blue = "^0.9.1"

[tool.poetry.group.doc.dependencies]
mkdocstrings = "^0.25.2"
mkdocstrings-python = "^1.10.8"
mkdocs-macros-plugin = "^1.0.5"
jinja2 = "^3.1.4"
termynal = "^0.12.1"
mkdocs-material = "^9.5.32"

[tool.pytest.ini_options]
pythonpath = "python"
addopts = "--doctest-modules"

[tool.isort]
profile = "black"
line_length = 79

[tool.taskipy.tasks]
codeck = "blue --check --diff . && isort --check --diff ."
codecg = "blue . && isort ."
docs = "mkdocs serve"
lintck = "ruff check ."
lintcg = "ruff check --fix ."
pre_test = "task codeck"
test = "pytest -s -x --cov=gramep -vv"
post_test = "coverage html"